--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,5 +2,4 @@
 @import "settings/variables";
 @import "settings/mixins";
 @import "settings/commons";
-@import "sections/header";
-@import "sections/main";
+@import "settings/form";
