--- a/src/styles/settings/_commons.scss
+++ b/src/styles/settings/_commons.scss
@@ -23,28 +23,13 @@ body {
     @include websiteFont(600, $colorNeutralVeryDark, $h2mobile) {
       margin: $space1 0;
       margin-bottom: $space3;
-      max-width: 600px;
+      max-width: 700px;
     }
   }
   h3 {
     @include websiteFont(500, $colorNeutralVeryDark, $h3mobile) {
       margin: $space2 0;
-      text-transform: uppercase;
-    }
-    span {
-      @media screen and ($tablet) {
-        display: inline-block;
-        border-bottom: 2px solid $colorNeutralVeryDark;
-        width: 10%;
-        position: relative;
-        bottom: 0.5rem;
-        &:first-of-type {
-          margin-right: 1rem;
-        }
-        &:last-of-type {
-          margin-left: 1rem;
-        }
-      }
+      max-width: 500px;
     }
   }
   h4 {
@@ -55,18 +40,7 @@ body {
   p {
     @include websiteFont(400, $colorNeutralVeryDark, $pmobile) {
       margin: 1rem 0;
-    }
-  }
-  ul {
-    margin-left: 1.25rem;
-    li {
-      list-style-type: disc;
-      color: white;
-      list-style-position: outside;
-      @include websiteFont(400, $colorNeutralVeryDark, $pmobile);
-      span {
-        display: inline-block;
-      }
+      max-width: 700px;
     }
   }
   @media screen and ($tablet) {
@@ -85,9 +59,6 @@ body {
     p {
       font-size: $pdesktop;
     }
-    ul li {
-      font-size: $pdesktop;
-    }
   }
   a {
     font-family: $webFont;
@@ -96,16 +67,26 @@ body {
     &.primary {
       display: inline-block;
       @include button($colorSecondary, none, white);
-      min-width: 130px;
+      border: 1px solid $colorSecondary;
+      min-width: 280px;
       &:hover {
         background-color: $colorPrimary;
+        border-color: $colorPrimary;
+      }
+    }
+    &.secondary {
+      display: inline-block;
+      @include button(transparent, 1px solid $colorSecondary, $colorSecondary);
+      min-width: 280px;
+      &:hover {
+        background-color: rgba(255, 255, 255, 0.25);
       }
     }
   }
   button.primary {
     @include button($colorSecondary, none, white);
     font-family: $webFont;
-    min-width: 130px;
+    min-width: 280px;
     &:hover {
       background-color: $colorPrimary;
     }
@@ -133,21 +114,23 @@ body {
   }
 }
 .background-image {
-  min-height: 100vh;
-  width: calc(100% + 1px);
+  display: none;
+  @media screen and ($desktop) {
+    display: block;
+  }
+  height: 100vh;
+  width: 100%;
   background-image: url("../assets/hero.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: fixed;
-  left: -1px;
+  right: -200px;
   z-index: -1;
-
   @media screen and ($desktop) {
     background-image: url("../assets/hero.png");
   }
 }
-
 .cookies {
   width: 100vw;
   position: fixed;
@@ -178,18 +161,34 @@ img.logo {
   margin: $space5 0;
 }
 .hero {
-  @media screen and ($desktop) {
-    height: 100vh;
+  min-height: 100vh;
+
+  .hero-content {
+    margin-bottom: $space5;
+    a {
+      margin: 0;
+    }
+    & > div:last-child {
+      padding: $space3 0;
+      display: flex;
+      flex-direction: column;
+      gap: $space3;  
+    }
+    @media screen and ($tablet) {
+      & > div:last-child {
+        flex-direction: row;
+        
+      }
+    }
   }
 }
 .form-section {
-  @media screen and ($desktop) {
-    height: 100vh;
-  }
+  min-height: 100vh;
+
   div {
     max-width: 600px;
   }
-
+  padding: $space5 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -200,8 +199,7 @@ footer {
   min-height: 50vh;
   color: white;
   position: relative;
-  display: flex;
-  align-items: center;
+  padding: $space5 0;
   h4,
   address,
   p {
