--- a/src/styles/settings/_placeholders.scss
+++ b/src/styles/settings/_placeholders.scss
@@ -5,7 +5,7 @@
   margin: $space4 0;
   border-radius: $borderRadius;
   font-weight: 500;
-  font-size: $pmobile;
+  font-size: $p;
   text-transform: uppercase;
   letter-spacing: 1px;
   line-height: 140%;
