--- a/src/styles/settings/_commons.scss
+++ b/src/styles/settings/_commons.scss
@@ -1,5 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
 
+@font-face {
+  font-family: "Tahu";
+  src: url("../fonts/tahu-webfont.woff2") format("woff2"),
+    url("../fonts/tahu-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
 * {
   margin: 0;
   padding: 0;
@@ -14,50 +21,58 @@ body {
   overflow-x: hidden;
   background-color: $colorPrimaryLight;
   h1 {
-    @include websiteFont(700, $colorNeutralVeryDark, $h1mobile) {
+    @include websiteFont(400, $colorNeutralDark, $h1mobile) {
       margin: $space4 0 $space1 0;
       max-width: 800px;
+      margin-bottom: $space4;
+      @media screen and ($tablet) {
+        margin-bottom: $space5;
+      }
+    }
+    span.decor {
+      display: block;
+      font-family: $webFontDecor;
+      position: relative;
+      font-weight: 400;
+      font-size: $decorMobile;
+      left: 4rem;
+      @media screen and ($tablet) {
+        font-size: $decorDesktop;
+      }
     }
   }
   h2 {
-    @include websiteFont(600, $colorNeutralVeryDark, $h2mobile) {
+    @include websiteFont(600, $colorNeutralDark, $subheadingMobile) {
       margin: $space1 0;
       margin-bottom: $space3;
-      max-width: 700px;
+      max-width: 600px;
     }
   }
   h3 {
-    @include websiteFont(500, $colorNeutralVeryDark, $h3mobile) {
+    @include websiteFont(500, $colorNeutralDark, $subheadingMobile) {
       margin: $space2 0;
-      max-width: 500px;
+      max-width: 600px;
     }
   }
   h4 {
-    @include websiteFont(500, $colorNeutralDark, $h4mobile) {
+    @include websiteFont(500, $colorNeutralDark, $subheadingMobile) {
       margin: $space4 0;
     }
   }
   p {
-    @include websiteFont(400, $colorNeutralVeryDark, $pmobile) {
+    @include websiteFont(400, $colorNeutralDark, $p) {
       margin: 1rem 0;
-      max-width: 700px;
+      max-width: 600px;
     }
   }
   @media screen and ($tablet) {
     h1 {
       font-size: $h1desktop;
     }
-    h2 {
-      font-size: $h2desktop;
-    }
-    h3 {
-      font-size: $h3desktop;
-    }
+    h2,
+    h3,
     h4 {
-      font-size: $h4desktop;
-    }
-    p {
-      font-size: $pdesktop;
+      font-size: $subheadingDesktop;
     }
   }
   a {
@@ -66,9 +81,13 @@ body {
     color: inherit;
     &.primary {
       display: inline-block;
+      display: flex;
+      justify-content: center;
       @include button($colorSecondary, none, white);
       border: 1px solid $colorSecondary;
-      min-width: 280px;
+      @media screen and (min-width: 500px) {
+        min-width: 280px;
+      }
       &:hover {
         background-color: $colorPrimary;
         border-color: $colorPrimary;
@@ -77,7 +96,9 @@ body {
     &.secondary {
       display: inline-block;
       @include button(transparent, 1px solid $colorSecondary, $colorSecondary);
-      min-width: 280px;
+      @media screen and (min-width: 500px) {
+        min-width: 280px;
+      }
       &:hover {
         background-color: rgba(255, 255, 255, 0.25);
       }
@@ -86,7 +107,9 @@ body {
   button.primary {
     @include button($colorSecondary, none, white);
     font-family: $webFont;
-    min-width: 280px;
+    @media screen and (min-width: 500px) {
+      min-width: 280px;
+    }
     &:hover {
       background-color: $colorPrimary;
     }
@@ -96,7 +119,7 @@ body {
     font-family: $webFont;
     padding: $space1 $space2;
     &:hover {
-      background-color: $colorNeutralDark;
+      background-color: rgba(255, 255, 255, 0.25);
     }
   }
   header {
@@ -107,11 +130,13 @@ body {
   .container {
     width: 90%;
     margin: 0 auto;
-
     @media screen and ($tablet) {
       width: 85%;
     }
   }
+}
+.d-none {
+  display: none;
 }
 .background-image {
   display: none;
@@ -131,40 +156,21 @@ body {
     background-image: url("../assets/hero.png");
   }
 }
-.cookies {
-  width: 100vw;
-  position: fixed;
-  bottom: 0;
-  background-color: $colorNeutralVeryDark;
-  z-index: 10;
-  padding: 0 5%;
-  @media screen and ($tablet) {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: $space2;
-  }
-  button.secondary {
-    margin: $space2 0;
-  }
-  p {
-    @include websiteFont(300, white, 0.8rem);
-    max-width: 90%;
-  }
-}
-.d-none {
-  display: none;
-}
 img.logo {
   width: 100%;
-  max-width: 260px;
-  margin: $space5 0;
+  max-width: 200px;
+  margin: $space4 0;
+  @media screen and ($tablet) {
+    margin: $space5 0 $space4 0;
+  }
+}
+.icon {
+  margin-right: $space1;
 }
 .hero {
   min-height: 100vh;
 
   .hero-content {
-    margin-bottom: $space5;
     a {
       margin: 0;
     }
@@ -172,12 +178,11 @@ img.logo {
       padding: $space3 0;
       display: flex;
       flex-direction: column;
-      gap: $space3;  
+      gap: $space3;
     }
     @media screen and ($tablet) {
       & > div:last-child {
         flex-direction: row;
-        
       }
     }
   }
@@ -215,5 +220,26 @@ footer {
     .social-icon {
       margin: $space2;
     }
+  }
+}
+.cookies {
+  width: 100vw;
+  position: fixed;
+  bottom: 0;
+  background-color: $colorNeutralDark;
+  z-index: 10;
+  padding: 0 5%;
+  @media screen and ($tablet) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: $space2;
+  }
+  button.secondary {
+    margin: $space2 0;
+  }
+  p {
+    @include websiteFont(300, white, 0.8rem);
+    max-width: 90%;
   }
 }
