--- a/src/styles/settings/_commons.scss
+++ b/src/styles/settings/_commons.scss
@@ -6,6 +6,7 @@
     url("../fonts/tahu-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 * {
   margin: 0;
@@ -149,22 +150,24 @@ body {
   }
   height: 100vh;
   width: 100%;
-  background-image: url("../assets/hero.png");
+  background-image: url("../assets/hero.webp");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: fixed;
   right: -200px;
   z-index: -1;
+  aspect-ratio: 1366/1080;
 }
 .mobile-background-image {
   height: 100vw;
   width: 100%;
   overflow-x: hidden;
-  background-image: url("../assets/heroMobile.png");
+  background-image: url("../assets/heromobile.webp");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  aspect-ratio: 1080/1080;
   @media screen and ($desktop) {
     display: none;
   }
@@ -172,6 +175,7 @@ body {
 img.logo {
   width: 100%;
   max-width: 200px;
+  height: auto;
   margin: $space4 0;
   @media screen and ($tablet) {
     margin: $space5 0 $space4 0;
